ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployment-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
     - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: group1
                port:
                  number: 4000
